[package]
name = "acme-article"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
http-body-util = "0.1.2"
hyper-rustls = "0.27.5"
hyper-util = "0.1.10"
instant-acme = "0.7.2"
rcgen = "0.13.2"
rustls = "0.23.21"
rustls-pemfile = "2.2.0"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
